web-infras/parser/tests/fixtures/babel/es2015/identifiers/invalid-escape-seq-if/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,1)
1|\u0069\u{66} (true) {}
 |^
